--- a/hardware/arduino/avr/libraries/SPI/CMakeLists.txt
+++ b/hardware/arduino/avr/libraries/SPI/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Project name
-project(Arduino_SPI)
+project(Arduino_SPI_${DEVICE_NAME})
 
 # CMake version
 cmake_minimum_required(VERSION 2.6)
@@ -15,5 +15,5 @@ target_include_directories(
 	${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}
 	)
-target_link_libraries(${PROJECT_NAME} Arduino)
+target_link_libraries(${PROJECT_NAME} Arduino_${DEVICE_NAME})
 
